[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ──────────────────────────────────────────────
# Project metadata
# ──────────────────────────────────────────────
[project]
name = "rag-doc-assistant"
version = "0.1.0"
description = "RAG-powered enterprise document assistant"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
    # ── LangChain core ──────────────────────────
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",
    "langsmith>=0.1.0",

    # ── LLM providers ───────────────────────────
    "openai>=1.30.0",
    "anthropic>=0.28.0",          # optional Anthropic fallback

    # ── Vector store & embeddings ───────────────
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",  # cross-encoder reranker
    "tiktoken>=0.7.0",               # token counting for chunking

    # ── Document loaders ────────────────────────
    "pypdf>=4.2.0",
    "pdfminer.six>=20221105",
    "docx2txt>=0.8",
    "unstructured>=0.14.0",          # universal loader fallback
    "python-magic>=0.4.27",          # MIME type detection
    "beautifulsoup4>=4.12.0",        # web page loader
    "lxml>=5.2.0",

    # ── FastAPI backend ──────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",       # file upload support
    "httpx>=0.27.0",                 # async HTTP client
    "sse-starlette>=2.1.0",          # server-sent events for streaming

    # ── Database & cache ─────────────────────────
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",               # async Postgres driver
    "psycopg2-binary>=2.9.9",        # sync driver (Alembic needs it)
    "redis>=5.0.4",
    "hiredis>=2.3.2",                # faster redis client

    # ── Config & env ────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",

    # ── Observability ────────────────────────────
    "mlflow>=2.13.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "structlog>=24.2.0",             # structured JSON logging
    "rich>=13.7.0",                  # pretty console output

    # ── Utilities ───────────────────────────────
    "tenacity>=8.3.0",               # retry logic for API calls
    "python-jose[cryptography]>=3.3.0",  # JWT auth
    "passlib[bcrypt]>=1.7.4",        # password hashing
    "hashlib2>=1.0.0",               # chunk deduplication
    "orjson>=3.10.0",                # fast JSON serialisation
    "anyio>=4.4.0",
]

# ── Optional extras ─────────────────────────────────────────────────
[project.optional-dependencies]

# pip install -e ".[dev]"
dev = [
    # Testing
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",                 # TestClient for FastAPI
    "factory-boy>=3.3.0",            # test data factories
    "faker>=25.0.0",

    # RAG evaluation
    "ragas>=0.1.9",
    "datasets>=2.20.0",              # HuggingFace datasets (RAGAS dep)

    # Linting & formatting
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",

    # Security scanning
    "bandit>=1.7.8",
    "safety>=3.2.0",

    # Dev utilities
    "ipython>=8.25.0",
    "ipdb>=0.13.13",
    "watchfiles>=0.22.0",
]

# pip install -e ".[frontend]"
frontend = [
    "streamlit>=1.35.0",
    "streamlit-chat>=0.1.1",
    "plotly>=5.22.0",                # usage analytics charts
    "pandas>=2.2.0",
]

# pip install -e ".[pinecone]"  — swap FAISS for Pinecone in prod
pinecone = [
    "pinecone-client>=3.2.0",
    "langchain-pinecone>=0.1.0",
]

# pip install -e ".[all]"
all = [
    "rag-doc-assistant[dev,frontend,pinecone]",
]

# ──────────────────────────────────────────────
# Tool: setuptools — package discovery
# ──────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "frontend*"]

# ──────────────────────────────────────────────
# Tool: ruff — linter
# ──────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line length — handled by black
    "B008",  # do not perform function calls in default args (FastAPI Depends)
    "N806",  # variable in function should be lowercase (FAISS index names)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]   # allow assert in tests
"alembic/*" = ["F401"] # allow unused imports in migration env

[tool.ruff.isort]
known-first-party = ["app", "frontend"]
combine-as-imports = true

# ──────────────────────────────────────────────
# Tool: black — formatter
# ──────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | alembic/versions
  | __pycache__
)/
'''

# ──────────────────────────────────────────────
# Tool: mypy — type checker
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["alembic/", "tests/"]

[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "sentence_transformers.*",
    "langchain.*",
    "unstructured.*",
    "docx2txt.*",
    "mlflow.*",
    "ragas.*",
]
ignore_missing_imports = true

# ──────────────────────────────────────────────
# Tool: pytest
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--no-header",
]
markers = [
    "unit: fast unit tests (no external services)",
    "integration: tests requiring Postgres and Redis",
    "eval: RAGAS evaluation suite (slow, requires OpenAI)",
    "slow: any test taking more than 10s",
]
filterwarnings = [
    "ignore::DeprecationWarning:langchain",
    "ignore::PendingDeprecationWarning",
]

# ──────────────────────────────────────────────
# Tool: coverage
# ──────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = [
    "app/tests/*",
    "alembic/*",
    "*/__init__.py",
]
branch = true

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

# ──────────────────────────────────────────────
# Tool: bandit — security linter
# ──────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]   # assert is fine in test files